Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-258803eed8a8>, line 4)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-6-5c8f5b3632c1>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-258803eed8a8>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    i += 1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-5c8f5b3632c1>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    # write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     "i = 0\n",
     "for j in city_indices:\n",
     "    names_and_ranks = [str[i].append(\". \").append(cities[i])\n",
-    "    i += 1\n",
+    "   # i += 1\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
