--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
+    "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
