--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-c234d1ca9c29>, line 4)",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(i)? (<ipython-input-20-0fd260491c49>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-c234d1ca9c29>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    i += 1\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-0fd260491c49>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print i\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(i)?\n"
      ]
     }
    ],
@@ -227,6 +227,7 @@
     "for j in city_indices:\n",
     "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
+    "    print i\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
