--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "for j in city_indices:\n",
     "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
-    "    print i\n",
+    "    print str.i\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
