Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(i)? (<ipython-input-20-0fd260491c49>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-21-01e26683e7f1>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-0fd260491c49>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print i\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(i)?\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-01e26683e7f1>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print str(i)\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
     "for j in city_indices:\n",
     "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
-    "    print str.i\n",
+    "    print str[i]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
