Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,24 +210,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(str[i])? (<ipython-input-22-6c355bbd293f>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-6c355bbd293f>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print str[i]\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(str[i])?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
     "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
-    "    print(stringp)\n",
+    "    print(str[i])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
