Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,15 +210,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
     "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
     "    i += 1\n",
-    "    print(str[i])\n",
+    "    print(i)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
