Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    #names_and_ranks = [str(i).append(\". \").append(cities[i])\n",
+    "    names_and_ranks = [str(i).append(\". \")\n",
+    "                       #.append(cities[i])\n",
     "    i += 1\n",
     "    print(i)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
