Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,6 +239,7 @@
     "                       #.append(cities[i])\n",
     "    i += 1\n",
     "    print(i)\n",
+    "    print\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
