--- a/index.ipynb
+++ b/index.ipynb
@@ -235,11 +235,12 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks = [str(i).append(\". \")\n",
+    "    #names_and_ranks = [str(i).append(\". \")\n",
     "                       #.append(cities[i])\n",
     "    \n",
     "    print(i)\n",
     "    print\n",
+    "    i += 1\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
