Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,13 +210,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0\n",
       "1\n",
       "2\n",
       "3\n",
@@ -227,15 +228,14 @@
       "8\n",
       "9\n",
       "10\n",
-      "11\n",
-      "12\n"
+      "11\n"
      ]
     }
    ],
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    #names_and_ranks = [str(i).append(\". \")\n",
+    "    names_and_ranks = [str(i).append(\". \")\n",
     "                       #.append(cities[i])\n",
     "    \n",
     "    print(i)\n",
