Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks = [str(i).append(\". \")\n",
+    "    names_and_ranks[i] = [str(i).append(\". \")\n",
     "                       #.append(cities[i])\n",
     "    \n",
     "    print(i)\n",
