--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks[i] = '{i}. {}\n",
+    "    names_and_ranks[i] = '{i}. cities{i}\n",
     "                       #.append(cities[i])\n",
     "    \n",
     "    print(i)\n",
