--- a/index.ipynb
+++ b/index.ipynb
@@ -210,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [1,2,]"
+    "names_and_ranks = [1,2,3,4,5,6,7,8,9,10,11,12]"
    ]
   },
   {
