Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,7 +244,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks[i] = '{i}. citiesi}'\n",
+    "    names_and_ranks[i] = '{i}. {cities[i]}'\n",
     "                      \n",
     "    \n",
     "    print(i)\n",
