--- a/index.ipynb
+++ b/index.ipynb
@@ -263,7 +263,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names_and"
+   ]
   },
   {
    "cell_type": "code",
