Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names_and_ranks = [1,2,3,4,5,6,7,8,9,10,11,12]"
+    "|names_and_ranks = [1,2,3,4,5,6,7,8,9,10,11,12]"
    ]
   },
   {
@@ -260,11 +260,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "names_and"
+    "names_and_ranks"
    ]
   },
   {
