--- a/index.ipynb
+++ b/index.ipynb
@@ -210,11 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "|names_and_ranks = [1,2,3,4,5,6,7,8,9,10,11,12]"
+    "names_and_ranks = [1,2,3,4,5,6,7,8,9,10,11,12]"
    ]
   },
   {
@@ -260,27 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}']"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
