Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks[i] = ('{i}. {cities[i]}'\n",
+    "    names_and_ranks[i] = ('{i}. {cities[i]}')\n",
     "                      \n",
     "    \n",
     "    print(i)\n",
@@ -260,16 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
+       "['{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}',\n",
+       " '{i}. {cities[i]}']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
