Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks[i] = ('{str(i}. {cities[i]}')\n",
+    "    names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "                      \n",
     "    \n",
     "    print(i)\n",
@@ -260,27 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}',\n",
-       " '{i}. {cities[i]}']"
+       "['{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}',\n",
+       " '{str(i)}. {cities[i]}']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
