Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -244,8 +244,12 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
-    "                      \n",
+    "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
+    "    from string import Template\n",
+    "name = 'world'\n",
+    "program ='python'\n",
+    "new = Template('Hello $name! This is $program.')\n",
+    "print(new.substitute(name= name,program=program))                \n",
     "    \n",
     "    print(i)\n",
     "    print\n",
