--- a/index.ipynb
+++ b/index.ipynb
@@ -246,8 +246,8 @@
     "for j in city_indices:\n",
     "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "    from string import Template\n",
-    "    name = 'world'\n",
-    "program ='python'\n",
+    "    number = 'world'\n",
+    "    program ='python'\n",
     "new = Template('Hello $name! This is $program.')\n",
     "print(new.substitute(name= name,program=program))                \n",
     "    \n",
