--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "    from string import Template\n",
     "    number = str(i)\n",
-    "    city =\n",
+    "    city =str(cities[1])\n",
     "new = Template('Hello $name! This is $program.')\n",
     "print(new.substitute(name= name,program=program))                \n",
     "    \n",
