--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
     "    from string import Template\n",
     "    number = str(i)\n",
     "    city =str(cities[1])\n",
-    "    new = Template('$number. $city This is $program.')\n",
+    "    new = Template('$number. $city')\n",
     "print(new.substitute(name= name,program=program))                \n",
     "    \n",
     "    print(i)\n",
