Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "    number = str(i)\n",
     "    city =str(cities[1])\n",
     "    new = Template('$number. $city')\n",
-    "print(new.substitute(name= name,program=program))                \n",
+    "names_andrnew.substitute(name= name,program=program))                \n",
     "    \n",
     "    print(i)\n",
     "    print\n",
