Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
     "    number = str(i)\n",
     "    city =str(cities[1])\n",
     "    new = Template('$number. $city')\n",
-    "    names_and_ranks[i]=new.substitute(number= number,program=program))                \n",
+    "    names_and_ranks[i]=new.substitute(number= number,city=city))                \n",
     "    \n",
     "    print(i)\n",
     "    print\n",
