Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,15 +219,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-45-6d59ebc95ef5>, line 10)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-46-2e415c3ad677>, line 8)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-6d59ebc95ef5>\"\u001b[0;36m, line \u001b[0;32m10\u001b[0m\n\u001b[0;31m    print(i)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-2e415c3ad677>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    names_and_ranks[i]=new.substitute(number= number,city=city))\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
