--- a/index.ipynb
+++ b/index.ipynb
@@ -219,15 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-46-2e415c3ad677>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-46-2e415c3ad677>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    names_and_ranks[i]=new.substitute(number= number,city=city))\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
      ]
     }
    ],
@@ -254,27 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}',\n",
-       " '{str(i)}. {cities[i]}']"
+       "[\"0. {'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\",\n",
+       " \"1. {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}\",\n",
+       " \"2. {'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\",\n",
+       " \"3. {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200}\",\n",
+       " \"4. {'City': 'Albuquerque', 'Country': 'New Mexico', 'Population': 559277, 'Area': 491}\",\n",
+       " \"5. {'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}\",\n",
+       " \"6. {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}\",\n",
+       " \"7. {'City': 'Archipelago Sea', 'Country': 'Finland', 'Population': 60000, 'Area': 8300}\",\n",
+       " \"8. {'City': 'Walla Walla Valley', 'Country': 'USA', 'Population': 32237, 'Area': 33}\",\n",
+       " \"9. {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}\",\n",
+       " \"10. {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\",\n",
+       " \"11. {'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 672}\"]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
