--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "    from string import Template\n",
     "    number = str(i)\n",
-    "    city =str(cities[i])\n",
+    "    city =str(city[i])\n",
     "    new = Template('$number. $city')\n",
     "    names_and_ranks[i]=(new.substitute(number= number,city=city))                \n",
     "    \n",
