Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
     "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "    from string import Template\n",
     "    number = str(i)\n",
-    "    city =str(city[i])\n",
+    "    city =str(city_names[i])\n",
     "    new = Template('$number. $city')\n",
     "    names_and_ranks[i]=(new.substitute(number= number,city=city))                \n",
     "    \n",
@@ -264,27 +264,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[\"0. {'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\",\n",
-       " \"1. {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}\",\n",
-       " \"2. {'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\",\n",
-       " \"3. {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200}\",\n",
-       " \"4. {'City': 'Albuquerque', 'Country': 'New Mexico', 'Population': 559277, 'Area': 491}\",\n",
-       " \"5. {'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}\",\n",
-       " \"6. {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}\",\n",
-       " \"7. {'City': 'Archipelago Sea', 'Country': 'Finland', 'Population': 60000, 'Area': 8300}\",\n",
-       " \"8. {'City': 'Walla Walla Valley', 'Country': 'USA', 'Population': 32237, 'Area': 33}\",\n",
-       " \"9. {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}\",\n",
-       " \"10. {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\",\n",
-       " \"11. {'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 672}\"]"
+       "['0. Buenos Aires',\n",
+       " '1. Toronto',\n",
+       " '2. Pyeongchang',\n",
+       " '3. Marakesh',\n",
+       " '4. Albuquerque',\n",
+       " '5. Los Cabos',\n",
+       " '6. Greenville',\n",
+       " '7. Archipelago Sea',\n",
+       " '8. Walla Walla Valley',\n",
+       " '9. Salina Island',\n",
+       " '10. Solta',\n",
+       " '11. Iguazu Falls']"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
