--- a/index.ipynb
+++ b/index.ipynb
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{i}. {cities[i]}'"
+       "'11. Iguazu Falls'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
