--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
     "for j in city_indices:\n",
     "    #names_and_ranks[i] = ('{str(i)}. {cities[i]}')\n",
     "    from string import Template\n",
-    "    number = str(i)\n",
+    "    number = str(i+1)\n",
     "    city =str(city_names[i])\n",
     "    new = Template('$number. $city')\n",
     "    names_and_ranks[i]=(new.substitute(number= number,city=city))                \n",
