--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = [1,2,3,4,5,6,7,8,]"
+    "city_populations = [1,2,3,4,5,6,7,8,9,10,11]"
    ]
   },
   {
