--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for j in city"
+   ]
   },
   {
    "cell_type": "code",
