Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -328,7 +328,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in city_indices"
+    "i = 0\n",
+    "for j in city_indices:"
    ]
   },
   {
