Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,8 @@
    "outputs": [],
    "source": [
     "i = 0\n",
-    "for j in city_indices:"
+    "for j in city_indices:\n",
+    "    city_populations[]"
    ]
   },
   {
