--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    city_populations[]"
+    "    city_populations[i]="
    ]
   },
   {
