Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -330,7 +330,7 @@
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    city_populations[i]="
+    "    city_populations[i]= [cities[i]['Population']"
    ]
   },
   {
