--- a/index.ipynb
+++ b/index.ipynb
@@ -344,6 +344,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "city"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {},
    "outputs": [
