--- a/index.ipynb
+++ b/index.ipynb
@@ -344,11 +344,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2891000, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_populations[]"
+    "city_populations"
    ]
   },
   {
