Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -324,13 +324,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
     "for j in city_indices:\n",
-    "    city_populations[i]=cities[i]['Population']"
+    "    city_populations[i]=cities[i]['Population']\n",
+    "    i +=1"
    ]
   },
   {
