--- a/index.ipynb
+++ b/index.ipynb
@@ -517,7 +517,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = []"
+    "city_areas = [1,2,3,4,5,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for j in city_indices:\n",
+    "    city_populations[i]=cities[i]['Population']\n",
+    "    i +=1"
    ]
   },
   {
