--- a/index.ipynb
+++ b/index.ipynb
@@ -513,11 +513,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_areas = [1,2,3,4,5,]"
+    "city_areas = [1,2,3,4,5,6,7,8,9,10,11,12]"
    ]
   },
   {
