Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -527,7 +527,7 @@
    "outputs": [],
    "source": [
     "i = 0\n",
-    "for j in city_indices:\n",
+    "for j in city_areas:\n",
     "    city_populations[i]=cities[i]['Population']\n",
     "    i +=1"
    ]
