Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -522,13 +522,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
     "for j in city_areas:\n",
-    "    city_areas[i]=cities[i]['Population']\n",
+    "    city_areas[i]=cities[i]['Area']\n",
     "    i +=1"
    ]
   },
