Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
    "source": [
     "i = 0\n",
     "for j in city_areas:\n",
-    "    city_areas[i]=cities[i]['Area']\n",
+    "    city_areas[i]=(cities[i]['Area'])*100\n",
     "    i +=1"
    ]
   },
